fix: prettier format

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>AirBnB Website</title>
     <link rel="stylesheet" href="styles/3-common.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="icon" type="image/png" href="images/icon.png" />
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
 
-    <footer>
-        Best School
-    </footer>
-</body>
+    <footer>Best School</footer>
+  </body>
 </html>
