--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>AirBnB Website</title>
     <link rel="stylesheet" href="styles/4-common.css" />
     <link rel="stylesheet" href="styles/3-header.css" />
@@ -8,15 +8,13 @@
     <link rel="stylesheet" href="styles/4-filters.css" />
 
     <link rel="icon" type="image/png" href="images/icon.png" />
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <div class="container"></div>
     <section class="filters">
-        <button>Search</button>
+      <button>Search</button>
     </section>
-    <footer>
-        Best School
-    </footer>
-</body>
+    <footer>Best School</footer>
+  </body>
 </html>
