--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>AirBnB Website</title>
     <link rel="stylesheet" href="styles/4-common.css" />
     <link rel="stylesheet" href="styles/3-header.css" />
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="styles/5-filters.css" />
 
     <link rel="icon" type="image/png" href="images/icon.png" />
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <div class="container">
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>Lagos</h4>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Bar</h4>
-            </div>
-            <button>Search</button>
-        </section>
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>Anambra</h4>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Bar</h4>
+        </div>
+        <button>Search</button>
+      </section>
     </div>
-    <footer>
-        Best School
-    </footer>
-</body>
+    <footer>Best School</footer>
+  </body>
 </html>
