--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>AirBnB Website</title>
     <link rel="stylesheet" href="styles/2-common.css" />
     <link rel="stylesheet" href="styles/2-footer.css" />
     <link rel="stylesheet" href="styles/2-header.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
 
     <footer>
-        <p>
-        Best School
-        </p>
+      <p>Best School</p>
     </footer>
-</body>
+  </body>
 </html>
