--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/7-places.css">
-    <link rel="icon" href="images/icon.png" type="image/png">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles/4-common.css" />
+    <link rel="stylesheet" href="styles/3-header.css" />
+    <link rel="stylesheet" href="styles/3-footer.css" />
+    <link rel="stylesheet" href="styles/6-filters.css" />
+    <link rel="stylesheet" href="styles/7-places.css" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
     <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
-      <div class="logo">
-      </div>
+      <div class="logo"></div>
     </header>
     <div class="container">
       <section class="filters">
@@ -47,9 +46,7 @@
             <li>Pool</li>
           </ul>
         </div>
-        <button>
-          Search
-        </button>
+        <button>Search</button>
       </section>
       <section class="places">
         <h1>Places</h1>
@@ -65,9 +62,7 @@
       </section>
     </div>
     <footer>
-      <p>
-        Best School
-      </p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
